-- ILib.cabal
name:                ilib
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mylib-exe
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5, ilib
  default-language:    Haskell2010